tests/snapshots/eval__conditionals__condition_with_and.snap
---
source: tests/eval.rs
expression: "run(r#\"if 1 < 2 and 3 > 2 { print(\"yes\") }\"#)"
---
Ok(
    "yes\n",
)
