tests/snapshots/eval__conditionals__else_if_falls_through_to_else.snap
---
source: tests/eval.rs
expression: "run(r#\"\n            var code = 200\n            if code >= 500 { print(\"server\") }\n            else if code >= 400 { print(\"client\") }\n            else { print(\"ok\") }\n            \"#)"
---
Ok(
    "ok\n",
)
