tests/snapshots/eval__conditionals__else_if_picks_middle.snap
---
source: tests/eval.rs
expression: "run(r#\"\n            var code = 404\n            if code >= 500 { print(\"server\") }\n            else if code >= 400 { print(\"client\") }\n            else { print(\"ok\") }\n            \"#)"
---
Ok(
    "client\n",
)
