tests/snapshots/eval__conditionals__if_block_scope_does_not_leak.snap
---
source: tests/eval.rs
expression: "run(\"if true { var x = 1 }\\nprint(x)\")"
---
Err(
    EvalError {
        category: Name,
        message: "unknown identifier `x`",
        span: Span {
            start: 28,
            end: 29,
        },
        cause: None,
    },
)
