tests/snapshots/eval__conditionals__if_false_runs_else.snap
---
source: tests/eval.rs
expression: "run(r#\"if false { print(\"no\") } else { print(\"yes\") }\"#)"
---
Ok(
    "yes\n",
)
