tests/snapshots/eval__conditionals__if_true_prints_then.snap
---
source: tests/eval.rs
expression: "run(\"if true { print(\\\"yes\\\") }\")"
---
Ok(
    "yes\n",
)
