tests/snapshots/eval__conditionals__nested_if_inner_runs.snap
---
source: tests/eval.rs
expression: "run(r#\"\n            if true {\n                if true {\n                    print(\"inner\")\n                }\n            }\n            \"#)"
---
Ok(
    "inner\n",
)
